# fin_insight

./: .gitignore  LICENSE  MANIFEST.in  README.md  fin_insight.py  pyproject.toml  requirements.txt  setup.py
tests/: test_fin_insight.py
