[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-insight"
version = "0.1.1"
description = "A financial analysis tool for stock sentiment and rating"
readme = "README.md"
authors = [{name = "Spock Stein", email = "spockstein@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.38",
    "requests>=2.31.0",
    "vaderSentiment>=3.3.2",
    "pandas>=2.2.1",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "twine>=4.0.2",
]

[project.scripts]
fin-insight = "fin_insight:cli"

[project.urls]
Homepage = "https://github.com/spockstein/fin_insight"
